Refaktorerer kall som lagrer status/tilstand for behandlingskontroll